--- a/html/header.css
+++ b/html/header.css
@@ -17,8 +17,9 @@
 }
 #logo{
     height: 24px;
+    width: 100p;
     margin-top: 12px;
-    margin-right: 20px;
+    margin-right: 40px;
     margin-bottom: 12px;
 }
 .left-header{
@@ -30,12 +31,7 @@
 #namecompany {
     font-size: 20px;
     font-weight: bold;
-    margin: 10px 0px;
-}
-#misa{
-    margin: 6px 10px 6px 24px;
-    height: 36px;
-    width: 36px;
+    margin: 10px 0px 0px 30px;
 }
 #customDropdown{
     margin-left: 10px;
