--- a/html/navbar.css
+++ b/html/navbar.css
@@ -12,16 +12,24 @@
     width: 20px;
     margin-right: 10px;
 } 
+span{
+    transition-property: display;
+    transition-duration: 3s;
+}
 .list-button{
+    padding: 0px;
     background-color: #ffff;
     font-size: 13px;
     color: #000000;
     height: 44px;
-    width: 148.42px;
-    text-align: left;
+    width: 180px;
+    text-align:  left;
     border: none;
     font-family: 'googleregular';
+    transition-property: width;
+    transition-duration: 3s;
 }
+
 .list-button:focus{
     background-color: #019160;
     height: 44px;
