--- a/html/navbar.css
+++ b/html/navbar.css
@@ -1,6 +1,21 @@
 @font-face {
     font-family: 'googleregular';
-    src: url(/Resource/Resource/font/GoogleSans-Medium.otf);
+    src: url(../Resource/Resource/font/GoogleSans-Medium.otf);
+}
+#mini{
+    background-color: #E9EBEE;
+    border-radius: 5px;
+    border: none;
+    width: 52px;
+    height: 44px;
+    font-size: 20px;
+    color: white;
+    float: right;
+}
+
+.navbar{
+    display: flex;
+    padding-right: 0px !important;
 }
 .navbar-list{
     padding: 0px;
@@ -12,22 +27,20 @@
     width: 20px;
     margin-right: 10px;
 } 
-span{
-    transition-property: display;
-    transition-duration: 3s;
-}
 .list-button{
     padding: 0px;
     background-color: #ffff;
     font-size: 13px;
     color: #000000;
     height: 44px;
-    width: 180px;
+    width: 196px;
     text-align:  left;
     border: none;
     font-family: 'googleregular';
     transition-property: width;
-    transition-duration: 3s;
+    transition-duration: 1s;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .list-button:focus{
