--- a/html/content.css
+++ b/html/content.css
@@ -75,6 +75,9 @@
     padding-left: 24px;
     padding-right: 24px;
 }
+#addform{
+    height: 100%;
+}
 #buttonadd:focus{
     background-color: #01B075;
     outline:1px solid white;
@@ -89,6 +92,11 @@
 }
 table {
     margin-top: 15px;
+    overflow: scroll; 
+}
+#tablecontainer{
+    height: 80%;
+    overflow: scroll;
 }
 tr:nth-child(even) {
     background-color: #e5e5e5;
@@ -138,7 +146,6 @@ tr:nth-child(even) {
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -146,11 +153,13 @@ tr:nth-child(even) {
   
   /* Modal Content/Box */
   .modal-content {
+    height: 90% !important;
     background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    margin: auto;
+    margin-top: 3%;
     padding: 20px;
     border: 1px solid #888;
-    width: 80% !important;
+    width: 900px !important;
     display:  block !important; /* Could be more or less, depending on screen size */
   }
   
