--- a/html/header.css
+++ b/html/header.css
@@ -28,10 +28,17 @@
 .center-header{
     display: flex;
 }
+#nameres{
+    border: none;
+}
+#nameres:focus{
+    outline: none;
+}
 #namecompany {
     font-size: 20px;
     font-weight: bold;
     margin: 10px 0px 0px 30px;
+    border: none;
 }
 #customDropdown{
     margin-left: 10px;
@@ -57,6 +64,7 @@
 .right-header{
     display: inline-block;
     margin-left: auto;
-    margin-top: 12px;
+    margin-top: 6px;
     margin-right: 16px;
+    vertical-align: middle;
 }
