--- a/html/content.css
+++ b/html/content.css
@@ -79,7 +79,7 @@
     padding-right: 24px;
 }
 #addform{
-    height: 100%;
+    height: 97%;
 }
 #buttonadd:focus{
     background-color: #01B075;
@@ -98,6 +98,7 @@ table {
     overflow: scroll; 
 }
 #tablecontainer{
+    margin-top: 5px;
     height: 80%;
     overflow: scroll;
 }
@@ -156,11 +157,14 @@ tr:nth-child(even) {
   
   /* Modal Content/Box */
   .modal-content {
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 1s;
+    animation-name: animatetop;
+    animation-duration: 1s;
     height: 90% !important;
     background-color: #fefefe;
     margin: auto;
     margin-top: 3%;
-    padding: 20px;
     border: 1px solid #888;
     width: 900px !important;
     display:  block !important; /* Could be more or less, depending on screen size */
@@ -172,6 +176,7 @@ tr:nth-child(even) {
     float: right;
     font-size: 28px;
     font-weight: bold;
+    padding: 20px;
   }
   
   .close:hover,
@@ -179,4 +184,13 @@ tr:nth-child(even) {
     color: #000;
     text-decoration: none;
     cursor: pointer;
+  }
+  @-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0} 
+    to {top:0; opacity:1}
+  }
+  
+  @keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
   }
