--- a/html/content.css
+++ b/html/content.css
@@ -150,7 +150,7 @@ tr:nth-child(even) {
     z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    overflow: auto; /* Enable scroll if needed */
+    overflow: auto !important; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
@@ -161,7 +161,6 @@ tr:nth-child(even) {
     -webkit-animation-duration: 1s;
     animation-name: animatetop;
     animation-duration: 1s;
-    height: 90% !important;
     background-color: #fefefe;
     margin: auto;
     margin-top: 3%;
