--- a/html/navbar.css
+++ b/html/navbar.css
@@ -15,7 +15,7 @@
 
 .navbar{
     display: flex;
-    padding-right: 0px !important;
+    padding: 0px !important;
 }
 .navbar-list{
     padding: 0px;
@@ -28,12 +28,13 @@
     margin-right: 10px;
 } 
 .list-button{
+    padding-left: 16px !important;
     padding: 0px;
     background-color: #ffff;
     font-size: 13px;
     color: #000000;
     height: 44px;
-    width: 196px;
+    width: 212px;
     text-align:  left;
     border: none;
     font-family: 'googleregular';
@@ -44,9 +45,10 @@
 }
 
 .list-button:focus{
-    background-color: #019160;
+    background-color: #019160 !important;
     height: 44px;
-    color: #ffff;
+    color: #ffff !important;
+    outline: none;
 }
 .list-button:hover{
     background-color: #e5e5e5;
